Fixes bug 73905 "CSS/JS documents are not cached" r=pierre, sr=waterson